--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -322,6 +322,25 @@ html, body {
     box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.5);
 }
 
+.header_fixed {
+    background-color: rgba(69, 69, 69, 1);
+    position: fixed;
+    margin-top: -5px;
+    margin-left: -5px;
+    padding: 5px;
+    width: 100%;
+    height: 50px;
+    z-index: 1
+}
+
+.header_text {
+    color: #ffffff;
+    text-align: center;
+    font-family: elfFont;
+    line-height: 45px;
+    font-size: 25px
+}
+
 .header_arrow_back {
     height: 30px;
     width: 86px;
@@ -340,7 +359,7 @@ html, body {
 .header_div {
     height: 50px;
     margin-bottom: 5px;
-    background-color: rgba(110, 110, 110, 0.7);
+    background-color: rgba(69, 69, 69, 1);
     color: #ffffff;
     text-align: center;
     font-family: elfFont;
@@ -443,6 +462,17 @@ html, body {
 }
 
 /* styles for artist.html and different artists */
+
+.alphabet {
+    height: 50px;
+    font-size: 30px;
+    line-height: 50px;
+    text-align: left;
+    margin: 0;
+    padding-left: 10px;
+    background-color: rgba(69, 69, 69, 1);
+    border-bottom: 1px solid #ffffff;
+}
 
 .artist_img {
     height: 79px;
