--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -278,7 +278,7 @@ html, body {
     background-color: rgba(110, 110, 110, 0.7);
     text-align: justify;
     padding: 10px;
-    margin-bottom: 10px;
+    margin: 50px 0 10px 0;
     height: 150px;
     overflow-y: scroll;
 }
